# TriangleTrash

./: .gitignore  CMakeLists.txt  Makefile  README.md  bot.cpp  bot.hpp  botmanager.cpp  botmanager.hpp  game.cpp  game.hpp  main.cpp  option.cpp  option.hpp  order.cpp  order.hpp  orderbook.cpp  orderbook.hpp  player.cpp  player.hpp  server.cpp  server.hpp  triangletrash.cpp
.github/workflows/: ci.yml
include/network/: market_data.hpp  protocol.hpp  server.hpp  task_queue.hpp  thread_pool.hpp  zero_copy.hpp
include/orderbook/: memory_pool.hpp  order.hpp  order_allocator.hpp  orderbook.hpp
include/session/: session.hpp  user.hpp
src/: main.cpp
src/network/: market_data.cpp  protocol.cpp  server.cpp  thread_pool.cpp  zero_copy.cpp
src/orderbook/: order.cpp  orderbook.cpp
src/session/: session.cpp  user.cpp
tests/: concurrent_test.cpp  network_test.cpp  orderbook_test.cpp  protocol_test.cpp
